# physicsexambot

./: .gitignore  README.md  main.py  pyproject.toml
app/: config_reader.py  database.py  handlers.py  image_reader.py  main.py
app/config/: app_context.py  config.py
app/handlers/: admin_commands.py  commands.py  images.py  superadmin_commands.py
app/utils/: keyboard.py  utils.py  wrappers.py
physika_exam/: bot_conf.txt  config.txt  config_reader.py  const.py  database.py  handlers.py  image_reader.py  main.py  main_conf.txt  photo_text_dict.txt  test_img.py  utility.py  utils.py
