[tool.poetry]
name = "physicsexambot"
version = "0.1.0"
description = "Telegram bot for OCR recognition of physics tasks"
authors = ["gesuyl <60263310+gesuyl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiogram = "^3.3.0"
pydantic = "^2.5.3"
SQLAlchemy = "^2.0.25"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
pillow = "^10.2.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
